k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestrator
  labels:
    name: orchestrator
    app: orchestrator
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    app: monitoring
