k8s/zap-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: zap-loadbalancer
  namespace: zap
spec:
  selector:
    app: zap
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer
