k8s/zap-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: zap-nodeport
  namespace: zap
spec:
  selector:
    app: zap
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30808
    protocol: TCP
  type: NodePort
